<!--
  ~ strings.xml
  ~
  ~ Copyright (c) 2013 Martin Burkhard.
  ~ CSCM Cooperation Systems Center Munich, Institute for Software Technology.
  ~ Bundeswehr University Munich. All rights reserved.
  ~
  ~ This program is made available under the terms of the
  ~ Eclipse Public License v1.0 which accompanies this distribution,
  ~ and is available at <http://www.eclipse.org/legal/epl-v10.html>.
  ~
  ~ The accompanying materials are made available under the terms
  ~ of Creative Commons Attribution-ShareAlike 3.0 Unported License.
  ~ You should have received a copy of the license along with this
  ~ work.  If not, see <http://creativecommons.org/licenses/by-sa/3.0/>.
  ~
  ~  Project: FishificationFX
  ~   Author: Martin Burkhard
  ~     Date: 8/30/13 7:46 PM
  -->

<resources>

    <string name="app_name">Fishification</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Fishification</string>
    <string name="tab_title_yourFish">Your Fish</string>
    <string name="tab_title_shareFish">Share Your Fish</string>
    <string name="tab_title_feedFish">Feed Fish</string>
    <string name="ui_createfish_textview_selectFish">Select Your Personal Fish:</string>
    <string name="ui_createfish_textview_createFish">Create Your Fish:</string>
    <string name="ui_sharefish_textview_contentToShare">Content to Share:</string>
    <string name="authorNameHint">Your name</string>
    <string name="fishNameHint">Fish Name</string>
    <string name="FlagTitleHint">Flag Title</string>
    <string name="FlagContentHint">Flag Content</string>
    <string name="FishSend">Send Fish</string>
    <string name="fishImageDescription">Fish Image</string>
    <string name="MainActivityTag">MainActivity</string>

</resources>