<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ fragment_create_fish.xml
  ~
  ~ Copyright (c) 2013 Martin Burkhard.
  ~ CSCM Cooperation Systems Center Munich, Institute for Software Technology.
  ~ Bundeswehr University Munich. All rights reserved.
  ~
  ~ This program is made available under the terms of the
  ~ Eclipse Public License v1.0 which accompanies this distribution,
  ~ and is available at <http://www.eclipse.org/legal/epl-v10.html>.
  ~
  ~ The accompanying materials are made available under the terms
  ~ of Creative Commons Attribution-ShareAlike 3.0 Unported License.
  ~ You should have received a copy of the license along with this
  ~ work.  If not, see <http://creativecommons.org/licenses/by-sa/3.0/>.
  ~
  ~  Project: FishificationFX
  ~   Author: Martin Burkhard
  ~     Date: 8/30/13 7:46 PM
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ui_createfish_textview_createFish"
            android:id="@+id/fishFormTextView"
            android:layout_margin="6dip"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/authorNameText"
            android:layout_gravity="right|center_vertical"
            android:singleLine="true"
            android:hint="@string/authorNameHint"
            android:maxLength="32"
            android:linksClickable="false"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fishNameText"
            android:singleLine="true"
            android:hint="@string/fishNameHint"
            android:maxLength="32"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ui_createfish_textview_selectFish"
            android:id="@+id/fishSelectTextView"
            android:layout_margin="6dip"/>

    <ListView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@android:id/list"
            android:choiceMode="singleChoice"
            />

</LinearLayout>